Bug 123684 - FILEOPEN PPTX: Slide background fill imported with wrong color
Summary: FILEOPEN PPTX: Slide background fill imported with wrong color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, filter:pptx, patch, regression
Depends on:
Blocks: PPTX
  Show dependency treegraph
 
Reported: 2019-02-24 17:31 UTC by Ofir
Modified: 2019-10-03 16:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
PPTX with text shape that has 'Slide background fill' (683.89 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-02-24 17:33 UTC, Ofir
Details
PDF exported from PowerPoint 2013 showing the expected result (104.35 KB, application/pdf)
2019-02-24 17:34 UTC, Ofir
Details
this patch would fix it but it would reintroduce bug 105150 + unittest (2.37 KB, patch)
2019-04-08 12:51 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ofir 2019-02-24 17:31:46 UTC
Description:
The attached PPTX has a text shape with 'Slide background fill'.
In this case the shape should display the same as a shape with 'No fill' but instead it has a white fill.

Steps to Reproduce:
1. Open the attached PPTX.

Actual Results:
The text shape has white fill.

Expected Results:
The text shape should have 'Slide background fill'. In this case it should look the same as 'No fill'.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Ofir 2019-02-24 17:33:30 UTC
Created attachment 149557 [details]
PPTX with text shape that has 'Slide background fill'
Comment 2 Ofir 2019-02-24 17:34:54 UTC
Created attachment 149558 [details]
PDF exported from PowerPoint 2013 showing the expected result
Comment 3 Durgapriyanka 2019-02-28 22:55:40 UTC
Thank you for reporting the bug. I Cannot reproduce this, because the text shape has a black fill.

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 4 Ofir 2019-02-28 23:27:28 UTC
Durgapriyanka, can you please compare your result with the attached PDF exported from PowerPoint?
The text shape should look transparent. I see a white solid fill but if it has black fill in your test, that's still a bug.
Comment 5 mulla.tasanim 2019-03-19 05:59:48 UTC
Hello

Thank you for reporting the bug. 

when I have tested with your attached PPTX its showing white fill.
But same When I tested with new Text Shape its giving me same as slide background fill.
When I checked properties for Text shape in your PPTXit shows:
Fill settings is assigned to color which has standard White color(Properties->Area->Fill->Color->White)
Please change Fill settings to None it will show the Slide Background Color


I can not reproduce the bug in

Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 6 Ofir 2019-03-19 09:14:37 UTC
mulla: in PowerPoint the text shape has the background color, in Impress the shape has white background.
Can you please compare to the attached PDF exported from PowerPoint?
Comment 7 Mike Kaganski 2019-03-19 09:31:12 UTC
Confirm the problem importing text box which has "Slide background fill" in the attached PPTX as filled with white in LO.

Tested with Version: 6.2.2.2 (x64)
Build ID: 2b840030fec2aae0fd2658d8d4f9548af4e3518d
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL

and with Version: 6.3.0.0.alpha0+ (x64)
Build ID: 63a25b79f18fda29cd744add813ce9508c69b996
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL

Both comment 3 and comment 5 actually confirm this; the issue is not about how to create that in LO, or about specific solid color, but about PPTX import filter bug that transparency is lost.
Comment 8 Xisco Faulí 2019-03-20 17:14:19 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.15; Render: default; 

and

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 9 Buovjaga 2019-04-07 19:07:48 UTC
Bibisected on Linux with 43all to range https://gerrit.libreoffice.org/plugins/gitiles/core/+log/a5661d717197a6723b80fb65cde463c479983934..243fbda523cb71d0919539081d286eec4717ce15

This seems likely to be the cause: https://gerrit.libreoffice.org/plugins/gitiles/core/+/5c714632583036f72377aa0fa6ed1137e53582dc%5E%21/
n744503: Importing useBgFill colors for shapes.

It even says
// This is supposed to fill with slide (background) color, but
// TODO: We are using white here, because thats the closest we can assume (?)
Comment 10 Mike Kaganski 2019-04-07 19:35:45 UTC
If it should have "no fill" then it looks like easyhack :-)
Comment 11 Xisco Faulí 2019-04-08 08:00:22 UTC
(In reply to Mike Kaganski from comment #10)
> If it should have "no fill" then it looks like easyhack :-)

it works here. I'll create a unittest and submit a patch.
Comment 12 Xisco Faulí 2019-04-08 12:50:00 UTC
Actually, this is a more recent regression.
As mentioned in comment 9, it was initially introduced by 5c714632583036f72377aa0fa6ed1137e53582dc. Later on, it got fixed by https://cgit.freedesktop.org/libreoffice/core/commit/?id=554158f7d33742284905ed4953dd09041ea04a5d but bug 105150 was introduced. Finally bug 105150 got fixed in 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9648deb1d99cde1c085767433242d6e1b834e2d and this issue was reintroduced

Adding Cc: to Miklos Vajna
Comment 13 Xisco Faulí 2019-04-08 12:51:26 UTC
Created attachment 150611 [details]
this patch would fix it but it would reintroduce bug 105150 + unittest

The patch attached would fix the issue but it would reintroduced bug 105150
Comment 14 Xisco Faulí 2019-04-08 12:54:39 UTC
Unassigning it for the time being...
Comment 15 Commit Notification 2019-04-23 07:58:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/943a534ac7cb3df513583e226c986dafd8ba246b%5E%21

tdf#123684 PPTX import: fix wrong background color for <p:sp useBgFill="1">

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2019-04-23 13:42:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/1d0729a5b7a96c6fb962b60a51eddf773773e379%5E%21

tdf#123684 PPTX import: fix wrong background color for <p:sp useBgFill="1">

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2019-04-23 17:21:52 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 053b1417137b0cdec4e4fed7ae0c57cf67ff2698
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!