tdf#123684 PPTX import: fix wrong background color for <p:sp useBgFill="1">

Regression from commit 59339dec1ce56213dc74a06af2f0d35ac1c534d7
(tdf#105150 PPTX import: try harder to handle <p:sp useBgFill="1">,
2017-01-06), the problem was that we gave a white solid fill to a shape
which is meant to be transparent.

Fix the problem by limiting the scope of the mentioned commit to solid
colors only, and also extend to code to look for background fill from
the masterpage as well. This allows not hardcoding the white solid fill
and leaves the fill style of shapes as transparent where the slide
background is a bitmap or other more complex fill type.

(cherry picked from commit 943a534ac7cb3df513583e226c986dafd8ba246b)

Change-Id: I0063e88d510250652d2b14856df3bd431681422d